# AgentCoach

./: .env.example  .gitignore  =1.0  pyproject.toml  requirements.txt
agentcoach/: __main__.py  cli.py  coach.py  config.yaml  log.py
agentcoach/analytics/: recommender.py  scorer.py  skill_profile.py  store.py
agentcoach/cards/: __init__.py  engine.py  schema.py
agentcoach/cli/: __init__.py  main.py  menu.py  session.py
agentcoach/coaching/: __init__.py  coach.py  compressor.py  context_builder.py  learning_harness.py  quiz_evaluator.py  quiz_state.py  strategies.py
agentcoach/companies/: __init__.py
agentcoach/content/: __init__.py  compiler.py
agentcoach/diagnostics/: __init__.py  (+2 more)
autoresearch/: results.md
codex-skills/: README.md
frontend/: README.md  index.html  report.html  session.html
scripts/: clean_boilerplate.py  comprehensive_e2e.py  e2e_dynamic.py  index_kb.py  index_lenny.py  learn_beginner.py  live_demo.py  live_interview_simulation.py  mock_interview.py  quick_voice_test.py  roleplay_e2e.py  scrape_all_hellointerview.py  scrape_hellointerview.py  stress_test.py  test_voice_demo.py  verify_skill_assessor.py  vtt_to_markdown.py
tests/: test_analytics.py  test_cards_engine.py  test_chunker.py  test_coach.py  test_content_compiler.py  test_feedback.py  test_importer.py  test_indexer.py  test_kb.py  test_kb_integration.py  test_llm.py  test_llm_base.py  test_memory.py  test_missions.py  test_mode_prompts.py  test_prompt.py  test_prompt_builder.py  test_recommender.py  test_scorer.py  test_syllabus.py  test_tts.py  test_tutor_integration.py
(+479 files in other folders)
