[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcoach"
version = "0.9.0"
description = "AI-powered mock interview coach with mastery tracking and structured evaluation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
vectors = [
    "numpy>=1.24",
]

[project.scripts]
agentcoach = "agentcoach.cli:main"
agentcoach-kb = "agentcoach.kb.cli:main"

[tool.setuptools.packages.find]
include = ["agentcoach*"]
